--- a/CSS/A-apple-about.css
+++ b/CSS/A-apple-about.css
@@ -121,10 +121,10 @@
 
 #apple_effect .parallax_window .effect_box .About .about-title-00 {
   margin-top: 15%;
-  width: 50%;
+  width: 60%;
   font-size: 48px;
   height: 60px;
-  line-height: 60px;
+  line-height: 30px;
   color: #673a1b;
   text-align: left;
 }
@@ -186,17 +186,19 @@
 
 #apple_effect .parallax_window .effect_box .About .about-title-01 {
   margin-top: 3%;
-  width: 60%;
+  width: 68%;
   font-size: 48px;
-  height: 60px;
+  height: 65px;
+  padding-top: 50px;
   line-height: 60px;
   color: #673a1b;
   text-align: left;
+  font-weight: 550;
 }
 
 @media (max-width: 1280px) {
   #apple_effect .parallax_window .effect_box .About .about-title-01 {
-    margin-top: 2%;
+    margin-top: 10%;
     height: 40px;
     line-height: 40px;
     font-size: 36px;
@@ -205,23 +207,24 @@
 
 @media (max-width: 768px) {
   #apple_effect .parallax_window .effect_box .About .about-title-01 {
-    margin-top: 1%;
+    margin-top: 18%;
     font-size: 30px;
     height: 34px;
-    line-height: 34px;
+    line-height: 0px;
   }
 }
 
 @media (max-width: 320px) {
   #apple_effect .parallax_window .effect_box .About .about-title-01 {
+    margin-top: 75px;
     font-size: 20px;
-    height: 32px;
-    line-height: 32px;
+    height: 40px;
+    line-height: -5;
   }
 }
 
 #apple_effect .parallax_window .effect_box .About .about-text-01 {
-  margin-top: 2%;
+  margin-top: 6%;
   width: 70%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -518,11 +521,11 @@
 }
 
 #apple_effect .parallax_window .effect_box .About-03 .about-title-00 {
-  margin-top: 15%;
+  margin-top: 12%;
   width: 50%;
   font-size: 48px;
   height: 60px;
-  line-height: 60px;
+  line-height: 5px;
   color: #673a1b;
   text-align: left;
 }
@@ -601,11 +604,11 @@
 
 #apple_effect .parallax_window .effect_box .About-03 .about-text-00 .about-text-5-team .team05 .color-gray {
   width: 5%;
-  height: 30px;
+  height: 50px;
   line-height: 30px;
   text-align: center;
-  font-size: 18px;
-  color: #b5b5b6;
+  font-size: 12px;
+  color: #75463a;
 }
 
 #apple_effect .parallax_window .effect_box .About-03 .about-text-00 .about-text-5-team .team05 .about-text-5-text {
