--- a/CSS/A-apple-about.scss
+++ b/CSS/A-apple-about.scss
@@ -27,7 +27,18 @@ $fon14: 14px;
             height: 100vh;
             overflow: hidden;
             text-align: center;
-            
+            // @media (max-width: 1280px) {
+            //     height: 700px;
+            // }
+            // @media (max-width: 1024px) {
+            //     height: 550px;
+            // }
+            // @media (max-width: 768px) {
+            //     height: 400px;
+            // }
+            // @media (max-width: 320px) {
+            //     height: 100%;
+            // }
             .effect_box {
                 width: 100%;
                 height: 100%;
@@ -97,10 +108,10 @@ $fon14: 14px;
                     // 關於十鼓-簡介標題 切板完成
                     .about-title-00 {
                         margin-top: 15%;
-                        width: 50%;
+                        width: 60%;
                         font-size: $fon48;
                         height: 60px;
-                        line-height: 60px;
+                        line-height: 30px;
                         color: #673a1b;
                         text-align: left;
                         @media (max-width: 1280px) {
@@ -127,6 +138,7 @@ $fon14: 14px;
                         width: 60%;
                         font-size: $fon30;
                         text-align: left;
+                      
                         @media (max-width: 1280px) {
                             font-size: $fon24;
                         }
@@ -145,37 +157,41 @@ $fon14: 14px;
                     // 沿革標題 切板完成
                     .about-title-01 {
                         margin-top: 3%;
-                        width: 60%;
+                        width: 68%;
                         font-size: $fon48;
-                        height: 60px;
+                        height: 65px;
+                        padding-top: 50px;
                         line-height: 60px;
                         color: #673a1b;
                         text-align: left;
+                        font-weight: 550;
                         @media (max-width: 1280px) {
-                            margin-top: 2%;
+                            margin-top: 10%;
 
                             height: 40px;
                             line-height: 40px;
                             font-size: $fon36;
                         }
                         @media (max-width: 768px) {
-                            margin-top: 1%;
+                            margin-top: 18%;
 
                             font-size: $fon30;
                             height: 34px;
-                            line-height: 34px;
+                            line-height: 0px;
                         }
                         @media (max-width: 320px) {
+                            margin-top:75px;
+
                             font-size: $fon20;
-                            height: 32px;
-                            line-height: 32px;
+                            height: 40px;
+                            line-height: -5;
                         }
                     }
                     // 沿革標題
 
                     ///沿革內容///
                     .about-text-01 {
-                        margin-top: 2%;
+                        margin-top: 6%;
                         width: 70%;
                         display: flex;
                         font-size: $fon30;
@@ -391,11 +407,11 @@ $fon14: 14px;
                     }
                     // 標題
                     .about-title-00 {
-                        margin-top: 15%;
+                        margin-top: 12%;
                         width: 50%;
                         font-size: $fon48;
                         height: 60px;
-                        line-height: 60px;
+                        line-height: 5px;
                         color: #673a1b;
                         text-align: left;
                         @media (max-width: 1280px) {
@@ -444,11 +460,11 @@ $fon14: 14px;
                                 width: 100%;
                                 .color-gray {
                                     width: 5%;
-                                    height: 30px;
+                                    height: 50px;
                                     line-height: 30px;
                                     text-align: center;
-                                    font-size: $fon18;
-                                    color: #b5b5b6;
+                                    font-size: 12px;
+                                    color: #75463a;
                                 }
                                 .about-text-5-text {
                                     width: 95%;
