--- a/CSS/C-Facility.css
+++ b/CSS/C-Facility.css
@@ -41,138 +41,192 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  /*// General styles */
 }
 
-.Facility .img-groups .img-teams {
-  width: 33.33%;
-  position: relative;
-}
-
-.Facility .img-groups .img-teams .bacimg-04 {
-  background-image: url("../img/設施/鞦韆_工作區域 1.png");
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.Facility .img-groups .img-teams .overlay {
-  position: absolute;
-  z-index: 10;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  overflow: hidden;
-  width: 0;
-  height: 100%;
-  -webkit-transition: 0.5s ease;
-  transition: 0.5s ease;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.Facility .img-groups .img-teams .overlay .text-box {
-  width: 50%;
-  color: #3e3a39;
-  font-size: 24px;
-  position: absolute;
-}
-
-.Facility .img-groups .img-teams:hover .overlay {
-  width: 100%;
-}
-
-.Facility .img-groups .img-team {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  justify-items: flex-end;
-  position: relative;
-}
-
-.Facility .img-groups .img-team:hover {
-  cursor: pointer;
-}
-
-.Facility .img-groups .img-team .image-circle {
-  width: 350px;
-  height: 350px;
-  border-radius: 50%;
-  border-top: 2px dashed #ffcc00;
-  border-right: 2px dashed #0b6c6d;
-  border-left: 2px dashed #f7f8f8;
-  border-bottom: 2px dashed #571212;
-  margin: 10px;
-  padding: 10px;
-  -webkit-animation: spin 10s infinite linear;
-          animation: spin 10s infinite linear;
-  overflow: hidden;
-}
-
-.Facility .img-groups .img-team .image-circle img {
-  animation: spin 10s infinite reverse linear;
-  width: 100%;
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-.Facility .img-groups .img-team .imggg {
-  width: 100%;
-  height: 100%;
-}
-
-.Facility .img-groups .img-team .imggg .imgg {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-image: url("../img/設施/煙囪滑梯.jpg");
-  background-position: center;
-}
-
-.Facility .img-groups .img-team .img01 {
-  background-image: url("/團體專題/3.程式/img/設施/天空上的鞦韆.jpg");
-}
-
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(1turn);
-            transform: rotate(1turn);
-  }
-}
-
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(1turn);
-            transform: rotate(1turn);
-  }
-}
-
-.Facility .img-groups .img-team .img-name {
-  position: absolute;
-  bottom: 90px;
-  left: -60px;
-  width: 50%;
-  height: 90px;
-  font-size: 24px;
+.Facility .img-groups .cell {
+  display: inline-block;
+  width: 30%;
   text-align: center;
-  line-height: 110px;
-  background-image: url("../img/插圖/設施體驗的雲2.png");
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  color: rgba(225, 225, 225, 0.5);
+  position: relative;
 }
 
-.Facility .img-groups .img-team .img-name:hover {
-  color: #b15821;
+.Facility .img-groups .circle01 {
+  background-image: url("../img/設施/飛天宅急便-正方形.png");
+}
+
+.Facility .img-groups .circle02 {
+  background-image: url("../img/設施/鋼鐵雷戰-正方形.png");
+}
+
+.Facility .img-groups .circle03 {
+  background-image: url("../img/設施/蜘蛛人-正方形.png");
+}
+
+.Facility .img-groups .circle04 {
+  background-image: url("../img/設施//天堂上的鞦韆-正方形.png");
+}
+
+.Facility .img-groups .circle05 {
+  background-image: url("../img/設施/煙囪滑梯-正方形_.png");
+}
+
+.Facility .img-groups .circle06 {
+  background-image: url("../img/設施/糖精落體-正方形.png");
+}
+
+.Facility .img-groups .circle {
+  display: inline-block;
+  width: 275px;
+  height: 275px;
+  border-radius: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-box-shadow: 4px -40px 60px 5px inset;
+          box-shadow: 4px -40px 60px 5px inset;
+}
+
+.Facility .img-groups .gelatine {
+  -webkit-animation: gelatine 2s infinite;
+          animation: gelatine 2s infinite;
+  /* cursor: pointer; */
+  position: relative;
+}
+
+@-webkit-keyframes gelatine {
+  from,
+  to {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+  }
+  25% {
+    -webkit-transform: scale(0.95, 1.05);
+            transform: scale(0.95, 1.05);
+  }
+  50% {
+    -webkit-transform: scale(1.05, 0.95);
+            transform: scale(1.05, 0.95);
+  }
+  75% {
+    -webkit-transform: scale(0.95, 1.05);
+            transform: scale(0.95, 1.05);
+  }
+}
+
+@keyframes gelatine {
+  from,
+  to {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+  }
+  25% {
+    -webkit-transform: scale(0.95, 1.05);
+            transform: scale(0.95, 1.05);
+  }
+  50% {
+    -webkit-transform: scale(1.05, 0.95);
+            transform: scale(1.05, 0.95);
+  }
+  75% {
+    -webkit-transform: scale(0.95, 1.05);
+            transform: scale(0.95, 1.05);
+  }
+}
+
+.Facility .img-groups .btn {
+  position: absolute;
+  left: 50px;
+  bottom: 150px;
+  width: 200px;
+  height: 90px;
+}
+
+.Facility .img-groups .btn-img {
+  background-image: url("../img/設施/設施體驗的雲2.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.modal-content01 {
+  background-image: url("../img/設施/飛天宅急便hover.png");
+}
+
+.modal-content02 {
+  background-image: url("../img/設施/鋼鐵雷戰hover.png");
+}
+
+.modal-content03 {
+  background-image: url("../img/設施/蜘蛛人hover.png");
+}
+
+.modal-content04 {
+  background-image: url("../img/設施/天堂上的鞦韆hover.png");
+}
+
+.modal-content05 {
+  background-image: url("../img/設施/煙囪滑梯hover.png");
+}
+
+.modal-content06 {
+  background-image: url("../img/設施/糖精落體hover.png");
+}
+
+.modal-content {
+  width: 100%;
+  height: 100%;
+  background-color: unset;
+  background-position: left;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: unset;
+}
+
+.modal-header {
+  border: unset;
+}
+
+.close {
+  color: #d4a63f;
+  font-size: 60px;
+}
+
+.modal-body {
+  width: 85%;
+  background-color: unset;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.F-wrap-l {
+  width: 50%;
+  margin-left: 30%;
+}
+
+.F-wrap-r {
+  width: 50%;
+  padding: 20px;
+}
+
+.F-title {
+  width: 100%;
+  font-size: 30px;
+  margin-top: 40px;
+  margin-bottom: 18px;
+}
+
+.f-text {
+  width: 100%;
+  font-size: 20px;
+}
+
+.f-coin {
+  margin-top: 18px;
 }
 /*# sourceMappingURL=C-Facility.css.map */
