--- a/CSS/F-Rented.css
+++ b/CSS/F-Rented.css
@@ -258,7 +258,7 @@
 }
 
 .Rented .photo-R .photo .swiper-container .swiper-slide .rented-img01 {
-  background-image: url("../img/場地租借/石鼓會議廳-2.jpg");
+  background-image: url("../img/場地租借/石鼓會議廳-2.png");
 }
 
 .Rented .photo-R .photo .swiper-container .swiper-slide .rented-img02 {
