--- a/CSS/F-Rented.scss
+++ b/CSS/F-Rented.scss
@@ -235,7 +235,7 @@ $fon14: 14px;
                         background-size: contain;
                     }
                     .rented-img01{
-                        background-image: url('../img/場地租借/石鼓會議廳-2.jpg');
+                        background-image: url('../img/場地租借/石鼓會議廳-2.png');
                     }
                     .rented-img02{
                         background-image: url('../img/場地租借/永不出軌宴會廳-1.jpg');
