--- a/CSS/E-Information.css
+++ b/CSS/E-Information.css
@@ -6,13 +6,15 @@ body {
 }
 
 .park_pag {
+  width: 100%;
   height: 100vh;
-  /* height: calc(100vh - 30px); */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -ms-flex-line-pack: start;
+      align-content: start;
   background-image: url("../img/入園資訊/背景news.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -20,137 +22,220 @@ body {
 }
 
 .park_button_bar {
-  height: calc(100vh - 47px);
   width: 20%;
-  /* background-color: antiquewhite; */
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.park_photo_R {
-  height: calc(100vh - 47px);
-  width: 80%;
-  /* background-color: rgb(233, 95, 40); */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.park_button_g {
-  height: 50%;
-  width: 50%;
-  /* background-color: rgb(40, 53, 233); */
-  margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   text-align: center;
 }
 
 .park_tittle {
-  height: 20%;
-  width: 100%;
-  /* background-color: rgb(79, 233, 40); */
-  font-size: 36px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin-top: 100px;
+  margin-bottom: 30px;
+  width: 80%;
+  color: #673a1b;
+  font-size: 48px;
+  height: 50px;
+  line-height: 50px;
+}
+
+@media (max-width: 1280px) {
+  .park_tittle {
+    font-size: 42px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .park_tittle {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 768px) {
+  .park_tittle {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 320px) {
+  .park_tittle {
+    font-size: 18px;
+  }
 }
 
 .park_lease_box {
-  height: 20%;
-  width: 100%;
-  /* background-color: rgb(233, 40, 159); */
+  width: 60%;
   font-size: 32px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  height: 40px;
+  line-height: 40px;
   cursor: pointer;
 }
 
+@media (max-width: 1280px) {
+  .park_lease_box {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .park_lease_box {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .park_lease_box {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 320px) {
+  .park_lease_box {
+    font-size: 16px;
+  }
+}
+
 .park_lease_box:hover {
-  /* background-color: royalblue; */
-  color: royalblue;
+  color: #0b6c6d;
+  border-bottom: 2px solid #b15821;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-.park_show {
-  height: 20%;
-  width: 100%;
-  /* background-color: rgb(233, 40, 159); */
+.park_lease_tour {
+  width: 60%;
   font-size: 32px;
+  height: 40px;
+  line-height: 40px;
+  cursor: pointer;
+}
+
+@media (max-width: 1280px) {
+  .park_lease_tour {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .park_lease_tour {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .park_lease_tour {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 320px) {
+  .park_lease_tour {
+    font-size: 16px;
+  }
+}
+
+.park_lease_tour:hover {
+  color: #0b6c6d;
+  border-bottom: 2px solid #b15821;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.park_lease_show {
+  width: 60%;
+  font-size: 32px;
+  height: 40px;
+  line-height: 40px;
+  cursor: pointer;
+}
+
+@media (max-width: 1280px) {
+  .park_lease_show {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .park_lease_show {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .park_lease_show {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 320px) {
+  .park_lease_show {
+    font-size: 16px;
+  }
+}
+
+.park_lease_show:hover {
+  color: #0b6c6d;
+  border-bottom: 2px solid #b15821;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+a.park_lease_tour {
+  color: unset;
+}
+
+a.park_lease_tour:hover {
+  color: unset;
+  text-decoration: none;
+}
+
+a.park_lease_show {
+  color: unset;
+}
+
+a.park_lease_show:hover {
+  color: unset;
+  text-decoration: none;
+}
+
+.park_photo_R {
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: black;
-}
-
-.park_tour {
-  height: 20%;
-  width: 100%;
-  /* background-color: rgb(233, 40, 159); */
-  font-size: 32px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: black;
 }
 
 .park_photobox {
-  height: 80%;
   width: 100%;
-  /* background-color: rgb(140, 40, 233); */
+  margin-top: 100px;
 }
 
 .park_inf {
-  height: 100%;
   width: 100%;
-  /* background-color: cornflowerblue; */
   display: none;
 }
 
 .park_inf_photo {
-  height: 100%;
   width: 100%;
-  /* background-color: darksalmon; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-items: center;
+}
+
+.style_img {
+  width: 90%;
 }
 
 /* --------開關顯示---- */
@@ -159,7 +244,6 @@ body {
 }
 
 .park_lease_box.park_active {
-  background-color: #95da3a;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -169,9 +253,5 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.style_img {
-  width: 80%;
 }
 /*# sourceMappingURL=E-Information.css.map */
