--- a/CSS/E-Information.scss
+++ b/CSS/E-Information.scss
@@ -13,120 +13,165 @@ body {
     margin: 0;
     box-sizing: border-box;
 }
-
+// 切板完成
 .park_pag {
+    width: 100%;
     height: 100vh;
-    /* height: calc(100vh - 30px); */
+
     display: flex;
     flex-wrap: wrap;
-    background-image: url('../img/入園資訊/背景news.jpg');
-    // background-image: url('../img/入園資訊/入園資訊\ 背景_工作區域\ 1.png');
+    align-content: start;
+    background-image: url("../img/入園資訊/背景news.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .park_button_bar {
-    height: calc(100vh - 47px);
     width: 20%;
-    /* background-color: antiquewhite; */
+    height: 100vh;
     display: flex;
-
-
-}
-
-.park_photo_R {
-    height: calc(100vh - 47px);
-    width: 80%;
-    /* background-color: rgb(233, 95, 40); */
-    display: flex;
-    align-items: center;
-}
-
-.park_button_g {
-    height: 50%;
-    width: 50%;
-    /* background-color: rgb(40, 53, 233); */
-    margin: auto;
-    display: flex;
+    justify-content: center;
+    align-content: flex-start;
     flex-wrap: wrap;
     text-align: center;
-
-
-
-
 }
-
 .park_tittle {
-    height: 20%;
-    width: 100%;
-    /* background-color: rgb(79, 233, 40); */
-    font-size: 36px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin-top: 100px;
+    margin-bottom: 30px;
+    width: 80%;
+    color: #673a1b;
+    font-size: $fon48;
+    height: 50px;
+    line-height: 50px;
 
+    @media (max-width: 1280px) {
+        font-size: $fon42;
+    }
+    @media (max-width: 1024px) {
+        font-size: $fon36;
+    }
+    @media (max-width: 768px) {
+        font-size: $fon24;
+    }
+    @media (max-width: 320px) {
+        font-size: $fon18;
+    }
 }
 
 .park_lease_box {
-    height: 20%;
-    width: 100%;
-    /* background-color: rgb(233, 40, 159); */
-    font-size: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 60%;
+    font-size: $fon32;
+    height: 40px;
+    line-height: 40px;
     cursor: pointer;
+    @media (max-width: 1280px) {
+        font-size: $fon24;
+    }
+    @media (max-width: 1024px) {
+        font-size: $fon20;
+    }
+    @media (max-width: 768px) {
+        font-size: $fon18;
+    }
+    @media (max-width: 320px) {
+        font-size: $fon16;
+    }
+    &:hover {
+        color: #0b6c6d;
+        border-bottom: 2px solid #b15821;
+        transition: 0.3s;
+    }
 }
-.park_lease_box:hover{
-    /* background-color: royalblue; */
-    color: royalblue;
+.park_lease_tour {
+    width: 60%;
+    font-size: $fon32;
+    height: 40px;
+    line-height: 40px;
+    cursor: pointer;
+    @media (max-width: 1280px) {
+        font-size: $fon24;
+    }
+    @media (max-width: 1024px) {
+        font-size: $fon20;
+    }
+    @media (max-width: 768px) {
+        font-size: $fon18;
+    }
+    @media (max-width: 320px) {
+        font-size: $fon16;
+    }
+    &:hover {
+        color: #0b6c6d;
+        border-bottom: 2px solid #b15821;
+        transition: 0.3s;
+    }
+}
+.park_lease_show {
+    width: 60%;
+    font-size: $fon32;
+    height: 40px;
+    line-height: 40px;
+    cursor: pointer;
+    @media (max-width: 1280px) {
+        font-size: $fon24;
+    }
+    @media (max-width: 1024px) {
+        font-size: $fon20;
+    }
+    @media (max-width: 768px) {
+        font-size: $fon18;
+    }
+    @media (max-width: 320px) {
+        font-size: $fon16;
+    }
+    &:hover {
+        color: #0b6c6d;
+        border-bottom: 2px solid #b15821;
+        transition: 0.3s;
+    }
 }
 
-
-.park_show {
-    height: 20%;
-    width: 100%;
-    /* background-color: rgb(233, 40, 159); */
-    font-size: 32px;
+a.park_lease_tour {
+    color: unset;
+    &:hover {
+        color: unset;
+        text-decoration: none;
+    }
+}
+a.park_lease_show {
+    color: unset;
+    &:hover {
+        color: unset;
+        text-decoration: none;
+    }
+}
+.park_photo_R{
+    width: 80%;
     display: flex;
-    align-items: center;
     justify-content: center;
-    color: black;
 }
-
-.park_tour {
-    height: 20%;
-    width: 100%;
-    /* background-color: rgb(233, 40, 159); */
-    font-size: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: black;
-}
-
 .park_photobox {
-    height: 80%;
     width: 100%;
-    /* background-color: rgb(140, 40, 233); */
-
+    margin-top: 100px;
+    
 }
 
 .park_inf {
-    height: 100%;
+    
     width: 100%;
-    /* background-color: cornflowerblue; */
     display: none;
 }
 
 .park_inf_photo {
-    height: 100%;
+    
     width: 100%;
-    /* background-color: darksalmon; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
+    display: flex; 
+    justify-items: center;
+}
+.style_img{
+    width: 90%;
 }
 /* --------開關顯示---- */
 
@@ -135,14 +180,7 @@ body {
 }
 
 .park_lease_box.park_active {
-    background-color: rgb(149, 218, 58);
     display: flex;
     align-items: center;
     justify-content: center;
-
-}
-
-.style_img{
-    width: 80%;
-
 }
