--- a/CSS/Home-index.scss
+++ b/CSS/Home-index.scss
@@ -18,6 +18,72 @@ $fon20: 20px;
 $fon18: 18px;
 $fon16: 16px;
 $fon14: 14px;
+body {
+    
+    overflow-x: hidden;
+  }
+.bg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: url() center center no-repeat;
+    background-size: cover;
+  }
+  
+  .smoke,
+  .smoke-bg {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    
+    background-image: url('https://pngimg.com/uploads/cloud/cloud_PNG4.png');
+    z-index: -4;
+    background-size: cover;
+  }
+  
+  .smoke-bg {
+    
+    background-image: url('https://eshopabc.com/wp-content/uploads/revslider/sport-smoke.png');
+    z-index: -5;
+  }
+  
+  .smoke {
+    animation: float2 15s infinite ease-in-out;
+  }
+  
+  .smoke-bg {
+    animation: float alternate 30s infinite ease-in-out;
+  }
+  
+  @keyframes float {
+    0% {
+      opacity: 0.8;
+      transform: translateX(3%) scale(1.2);
+    }
+    50% {
+      opacity: 0.8;
+      transform: translateX(0) scale(1.4);
+    }
+    100% {
+      opacity: 0.8;
+      transform: translateX(-3%) scale(1.2);
+    }
+  }
+  @keyframes float2 {
+    0% {
+      opacity: 0;
+      transform: translateX(-10%) scale(1.5);
+    }
+    50% {
+      opacity: 1;
+      transform: translateX(0) scale(1.2);
+    }
+    100% {
+      opacity: 0;
+      transform: translateX(10%) scale(1.5);
+    }
+  }
+
 // 切板完成
 .index {
     .Nav {
@@ -199,7 +265,7 @@ $fon14: 14px;
     .big-img {
         position: absolute;
         bottom: 0;
-        z-index: -1;
+        z-index: -6;
         background-image: url("../img/主頁背景/主頁背景-降_工作區域\ 1.jpg");
         background-position: center;
         background-repeat: no-repeat;
