雲霧網址改路徑

--- a/CSS/Home-index.scss
+++ b/CSS/Home-index.scss
@@ -36,14 +36,14 @@ body {
     width: 100vw;
     height: 100vh;
     
-    background-image: url('https://pngimg.com/uploads/cloud/cloud_PNG4.png');
+    background-image: url('../img/主頁背景/cloud_PNG4.png');
     z-index: -4;
     background-size: cover;
   }
   
   .smoke-bg {
     
-    background-image: url('https://eshopabc.com/wp-content/uploads/revslider/sport-smoke.png');
+    background-image: url('../img/主頁背景/sport-smoke.png');
     z-index: -5;
   }
   
