--- a/CSS/B-News.css
+++ b/CSS/B-News.css
@@ -1,11 +1,127 @@
 @charset "UTF-8";
+body {
+  overflow-x: hidden;
+}
+
+.bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: url() center center no-repeat;
+  background-size: cover;
+}
+
+.smoke,
+.smoke-bg {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("../img/主頁背景/cloud_PNG4.png");
+  z-index: -4;
+  background-size: cover;
+}
+
+.smoke-bg {
+  background-image: url("../img/主頁背景/sport-smoke.png");
+  z-index: -5;
+}
+
+.smoke {
+  -webkit-animation: float2 15s infinite ease-in-out;
+          animation: float2 15s infinite ease-in-out;
+}
+
+.smoke-bg {
+  -webkit-animation: float alternate 30s infinite ease-in-out;
+          animation: float alternate 30s infinite ease-in-out;
+}
+
+@-webkit-keyframes float {
+  0% {
+    opacity: 0.8;
+    -webkit-transform: translateX(3%) scale(1.2);
+            transform: translateX(3%) scale(1.2);
+  }
+  50% {
+    opacity: 0.8;
+    -webkit-transform: translateX(0) scale(1.4);
+            transform: translateX(0) scale(1.4);
+  }
+  100% {
+    opacity: 0.8;
+    -webkit-transform: translateX(-3%) scale(1.2);
+            transform: translateX(-3%) scale(1.2);
+  }
+}
+
+@keyframes float {
+  0% {
+    opacity: 0.8;
+    -webkit-transform: translateX(3%) scale(1.2);
+            transform: translateX(3%) scale(1.2);
+  }
+  50% {
+    opacity: 0.8;
+    -webkit-transform: translateX(0) scale(1.4);
+            transform: translateX(0) scale(1.4);
+  }
+  100% {
+    opacity: 0.8;
+    -webkit-transform: translateX(-3%) scale(1.2);
+            transform: translateX(-3%) scale(1.2);
+  }
+}
+
+@-webkit-keyframes float2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-10%) scale(1.5);
+            transform: translateX(-10%) scale(1.5);
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: translateX(0) scale(1.2);
+            transform: translateX(0) scale(1.2);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(10%) scale(1.5);
+            transform: translateX(10%) scale(1.5);
+  }
+}
+
+@keyframes float2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-10%) scale(1.5);
+            transform: translateX(-10%) scale(1.5);
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: translateX(0) scale(1.2);
+            transform: translateX(0) scale(1.2);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(10%) scale(1.5);
+            transform: translateX(10%) scale(1.5);
+  }
+}
+
+.New-bg {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../img/主頁背景/news-降_工作區域 1.jpg");
+  position: fixed;
+  z-index: -6;
+}
+
 .New {
   width: 100%;
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-image: url("../img/主頁背景/news-降_工作區域 1.jpg");
 }
 
 @media (max-width: 1024px) {
